--- a/package.json
+++ b/package.json
@@ -11,13 +11,18 @@
     "@mdi/font": "5.9.55",
     "@mdi/js": "^5.9.55",
     "@vue/composition-api": "^1.1.1",
+    "axios": "^0.21.1",
     "core-js": "^3.6.5",
     "register-service-worker": "^1.7.1",
     "roboto-fontface": "*",
+    "typed-vuex": "^0.2.0",
     "vue": "^2.6.11",
     "vue-router": "^3.2.0",
     "vuetify": "^2.4.0",
-    "vuex": "^3.4.0"
+    "vuex": "^3.4.0",
+    "vuex-persist": "^3.1.3",
+    "moment": "^2.29.1",
+    "moment-timezone": "^0.5.32"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.5.0",
